Adding Get Videogame All for Layout-1
