# src/api/swagger/swagger.yaml
@@ -48,6 +48,34 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /get/videogames/layout :
+    x-swagger-router-controller: pandaScore
+    post:
+      tags:
+      - pandaScore
+      summary: Get All Videogames from Panda Score and DB to Layout
+      operationId: getVideoGamesLayout
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: Get VideoGames All to Layout
+          description: Get All Videogames from Panda Score and DB to Layout
+          schema:
+            $ref: '#/definitions/VideogamesLayoutRequest'
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/GeneralResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /get/matches/all :
     x-swagger-router-controller: pandaScore
     post:
@@ -236,6 +264,20 @@ definitions:
         type : string
         description: |
           Admin ID
+  VideogamesLayoutRequest:
+    type: object
+    required:
+      - user
+      - app
+    properties:
+      user:
+        type : string
+        description: |
+          User ID
+      app:
+        type : string
+        description: |
+          App ID
   GeneralResponse : 
     type: object
     required:
